--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@marsidev/react-turnstile": "^1.4.2",
+    "@supabase/supabase-js": "^2.97.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
